# markdown-viewer

./: .gitignore  README.md  README_ja.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: index.html  main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
